# low-latency-trading

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  chapter9.md  compose.yaml  intro.md  requirements.txt
README/: the_trading_ecosystem.md
benchmarks/: hash_benchmark.cpp  logger_benchmark.cpp
common/: CMakeLists.txt  lf_queue.md  lf_queue_example.cpp  logging_example.cpp  mcast_socket.md  mem_pool.h  socket_example.cpp  socket_utils.h  tcp_socket.cpp  tcp_socket.md  thread_utils.h  types.h
exchange/: exchange_main.cpp  exchange_main.md
exchange/market_data/: market_data_publisher.cpp  market_data_publisher.md  market_update.h  market_update.md  snapshot_synthesizer.cpp  snapshot_synthesizer.h  snapshot_synthesizer.md
exchange/matcher/: matching_engine.cpp  matching_engine.h  matching_engine.md  me_order.h  me_order.md  me_order_book.cpp  me_order_book.h  me_order_book.md
exchange/order_server/: client_request.h  client_request_response.md  client_response.h  fifo_sequencer.h  order_gateway_server.md  order_server.cpp  order_server.h
inputs/: CMakeLists.txt  lf_queue.h  logging.h  logging.md  mem_pool.md  socket_utils.md  tcp_server.cpp  tcp_socket.h  thread.md  time_utils.h
notebooks/: perf_analysis.ipynb
scripts/: build.sh  no_clean_build.sh  run_clients.sh  run_exchange_and_clients.sh
trading/: trading_main.cpp
trading/market_data/: market_data_consumer.cpp  market_data_consumer.md
trading/order_gw/: order_gateway.cpp  order_gw.md
trading/strategy/: feature_engine.md  liquidity_taker.md  market_maker.md  market_order.md  market_order_book.cpp  market_order_book.h  market_order_book.md  order_manager.md  position_keeper.h  position_keeper.md  risk_manager.md  trade_engine.cpp  trade_engine.md  trading_engine.md
